# NanoCore

./: Cargo.toml  README.md  release.sh
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: CNAME  index.html  style.css
programs/: abcde.nca  abcde.ncb  counter.nca  counter_labels.nca  counter_labels.ncb  draw_rectangle.nca  draw_rectangle.ncb  fib.nca  fib.ncb  fib_extended.nca  fib_extended.ncb  functions.nca  functions.ncb  screen.nca  stack.nca  stack.ncb  test.nca  test.ncb
src/: assembler.rs  compiler.rs  computer.rs  cpu.rs  error.rs  lib.rs  main.rs  nanocore.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
tests/: emulator_tests.rs  error_handling_tests.rs  integration_tests.rs
